<resources>
    <string name="app_name">Golden Pegasus</string>
    <string name="title_todo">Todo</string>
    <string name="title_appblocking">App Block</string>
    <string name="title_location">Location</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Keys -->
    <string name="appblock">App Block</string>
    <string name="profile">Profile</string>
    <string name="restricted_apps">Restricted Apps</string>
    <string name="time_limit">Time Limit</string>
    <string name="pedometer">Pedometer</string>

    <string name="enable_location">Location Based Reminder</string>
    <string name="enable_location_alarm">Enable Location Alarm</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="reset_statistic">Reset Statistics</string>

    <string name="hw_time_key">HW Mode time</string>
    <string name="hw_shake_val_key">Shake Count HW Mode</string>
    <string name="hw_pedometer_bool_key">Pedometer HW Mode</string>
    <string name="hw_pedometer_val_key">Step Count HW Mode</string>

    <string name="location_summary">Get reminders and travel estimates from where you are.</string>
    <!-- Preference Titles -->
    <string name="profile_header">YOUR PROFILE</string>
    <string name="app_blocking_header">APP BLOCKING MODE</string>
    <string name="location_reminder_header">LOCATION REMINDER MODE</string>
    <string name="homework_header">HOMEWORK MODE</string>
    <string name="general_header">GENERAL</string>

    <!-- Profile Preferences -->
    <string name="profile_title">Display Name</string>
    <string name="profile_summary">Display Name</string>
    <string name="profile_dialog_title">Enter Your Name</string>

    <!-- App Blocking Mode Preferences -->
    <string name="appblock_category_summary">Use your phone too much? Moderate your app usage.</string>
    <string name="appblock_title">App Blocking</string>
    <string name="appblock_summary_on">App blocking enabled</string>
    <string name="appblock_summary_off">App blocking disabled</string>
    <string name="restricted_apps_title">Select Apps to Restrict</string>
    <string name="restricted_apps_dialog">Apps to Restrict</string>
    <string name="smart_blocking_title">Smart Blocking</string>
    <string name="smart_blocking_summary">Smarter detection of procrastination for a bigger push.</string>
    <string name="time_limit_title">Maximum Time Limit</string>
    <string name="block_duration_title">Block Duration</string>
    <string name="pedometer_title">Pedometer</string>
    <string name="pedometer_summary_on">Step count feature enabled during app blocking</string>
    <string name="pedometer_summary_off">Step count feature disabled during app blocking</string>
    <string name="pedometer_count_title">Pedometer Step Count</string>
    <string name="pedometer_count_summary">Select number of steps to complete</string>

    <!-- Location Preferences -->

    <!-- hw mode -->
    <string name="hw_summary">Block selected apps and receive regular check-ins to focus.</string>
    <string name="hw_time_title">Check-in Interval</string>
    <string name="hw_time_summary">The duration between each check-in time</string>
    <string name="hw_shake_val_title">Shake count</string>
    <string name="hw_shake_val_summary">The number of times you have to shake your phone to disable the alarm.</string>
    <string name="hw_pedometer_bool_title">Use Pedometer</string>
    <string name="hw_pedometer_val_title">Pedometer Step Count</string>
    <string name="hw_pedometer_summary_on">Pedometer enabled during homework mode</string>
    <string name="hw_pedometer_summary_off">Pedometer disabled during homework mode</string>

    <string name="hw_time_value">
        hw_time_value
    </string>

    <string name="hw_shake_value">
        hw_shake_value
    </string>

    <string name="hw_time_notification_value">
        hw_time_notification_value
    </string>

    <string name="hw_time_alarm_value">
        hw_time_alarm_value
    </string>

    <string name="hw_pedometer_value">
        hw_pedometer_value
    </string>

    <string name="hw_time_current_clock_time">
        hw_time_current_clock_time
    </string>

    <string name="hw_pedometer_bool">
        hw_pedometer_bool
    </string>

    <string name="hw_mode_bool">
        hw_mode_bool
    </string>

    <string name="SHAKE">SHAKE</string>
    <string name="WALK">WALK</string>
    <string name="FROMBLOCK">FROMBLOCK</string>
    <string name="FROM_PRENOTI">FROM_PRENOTI</string>
    <string name="FROM_FINALNOTI">FROM_FINALNOTI</string>
    <string name="FROM_RUNNINGNOTI">FROM_RUNNINGNOTI</string>

    <string name="SECONDS_REMAINING_ID">
        com.example.goldenpegasus.seconds_remaining
    </string>

    <string name="TIMER_LENGTH_ID">
        com.example.goldenpegasus.timer_length
    </string>

    <string name="TIMER_EXPIRED_TXT_SHAKE">
        WAKE UP! SHAKE YOUR DEVICE
    </string>

    <string name="TIMER_EXPIRED_TXT_WALK">
        WAKE UP! WALK AROUND
    </string>

    <string name="HW_NOTIFICATION_CHANNEL_NAME">HW_CHANNEL</string>
    <string name="HW_NOTIFICATION_CHANNEL_DESCRIPTION">HW_NOTIFICATION_CHANNEL_DESCRIPTION</string>
    <string name="HW_NOTIFICATION_CHANNEL_ID">HW_CHANNEL_ID</string>
    <string name="HW_NOTIFICATION_TITLE">HW Mode</string>
    <string name="HW_NOTIFICATION_CONTENT">Are you awake?</string>
    <string name="SHAKE_COMPLETE">SHAKE_COMPLETE</string>
    <string name="WALK_COMPLETE">WALK_COMPLETE</string>
    <string name="NOTIFICATION">NOTIFICATION</string>
    <string name="FINAL_ALARM">FINAL_ALARM</string>

    <!-- Location -->
    <string name="preparation_time_value">20</string>
    <string name="odsay_key">Qyb4YWtiFBd/Oz07uS+2273XmRFWFYOTXil+4C6QsPs</string>
    <string name="naver_api_key_id">vdzq4ajyej</string>
    <string name="naver_api_key">A6CoEzf661hYYJ7qBkvILYG7spFDQOR18SBgIh1N</string>
    <string name="next">NEXT UP</string>
    <string name="next_loc">No Schedule</string>
    <string name="time_loc">00:00</string>
    <string name="what_where">What/Where</string>
    <string name="goal_time">Goal time</string>
    <string name="remind_text">LOCATION REMINDERS</string>
    <string name="stat_title">YOUR STATS</string>
    <string name="grade">A+</string>
    <string name="stat_label">On-time: 0 times | Absent: 0 time</string>
    <string name="display_label">Display label</string>
    <string name="location_label">Location</string>
    <string name="time_title">Time</string>
    <string name="date_title">Date</string>
    <string name="repeat">Repeats on</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="hint">e.g. Main Library</string>
    <string name="word_count">0 / 17</string>
    <string name="app_bar_add_location">Add schedule</string>
</resources>
