<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_todo">

    <fragment
        android:id="@+id/navigation_todo"
        android:name="com.example.bluecatapp.ui.todo.TodoFragment"
        android:label="@string/title_todo" />

    <fragment
        android:id="@+id/navigation_appblocking"
        android:name="com.example.bluecatapp.ui.appblocking.AppBlockingFragment"
        android:label="@string/title_appblocking" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.bluecatapp.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />
    <fragment
        android:id="@+id/navigation_location"
        android:name="com.example.bluecatapp.ui.location.LocationFragment"
        android:label="@string/title_location" />
</navigation>